k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - ericirwin.io
    secretName: letsencrypt-prod
  rules:
  - host: ericirwin.io
    http:
      paths:
      - backend:
          serviceName: web
          servicePort: 80
